fix: fixed faynman position

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               alt="Imagem de um cafe dentro de uma biblioteca"
             />
             <div class="person person_name_feynman">
-              <p class="person_caption">Joan Feynman</p>
+              <p class="person__caption">Joan Feynman</p>
               <img
                 src="./images/person_feynman.png"
                 class="person__image person__image_size_l"
@@ -183,7 +183,7 @@
             </div>
 
             <div class="person person_name_burbidge">
-              <p class="person_caption">Margaret Burbidge</p>
+              <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="./images/person_burbidge.png"
                 class="person__image person__image_size_m"
@@ -192,7 +192,7 @@
             </div>
 
             <div class="person person_name_cannon">
-              <p class="person_caption">Annie Jump Cannon</p>
+              <p class="person__caption">Annie Jump Cannon</p>
               <img
                 src="./images/person_cannon.png"
                 class="person__image person__image_size_m"
@@ -201,7 +201,7 @@
             </div>
 
             <div class="person person_name_mitchell">
-              <p class="person_caption">Maria Mitchel</p>
+              <p class="person__caption">Maria Mitchel</p>
               <img
                 src="./images/person_mitchell.png"
                 class="person__image person__image_size_s"
@@ -210,7 +210,7 @@
             </div>
 
             <div class="person person_name_tarter">
-              <p class="person_caption">Jill Tarter</p>
+              <p class="person__caption">Jill Tarter</p>
               <img
                 src="./images/person_tarter.png"
                 class="person__image person__image_size_m"
