--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Seja um membro</a>
+              <a class="nav__link" href="#membership">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -219,6 +219,98 @@
             </div>
           </div>
         </section>
+        <section class="membership" id="membership">
+          <h2 class="membership__title">Ser membro da biblioteca é fácil</h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Passo 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Preencha o formulário de filiação online.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Venha retirar seu cartão da biblioteca na recepção.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Assine o verso do cartão.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Passo 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Aproveite todos os incríveis benefícios de ser membro!
+              </p>
+            </li>
+          </ul>
+        </section>
+        <footer class="footer" id="footer">
+          <div class="footer__columns">
+            <div class="footer__column footer__column_content_logo">
+              <img src="./images/logo_white.svg" alt="logo Biblioteca Triple" class="footer__logo">
+            </div>
+
+            <div class="footer__column footer__column_content_hours">
+              <h3 class="footer__column-heading">Horários</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">Dias uteis: 9h- 20h</li>
+                <li class="footer__list-item">Finais de semana: 10h as 18h</li>
+              </ul>
+            </div>
+
+            <div class="footer__column footer__column_content_social">
+              <h3 class="footer__column-heading">Redes Sociais</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a href="#" class="footer__column-link">
+                    <img src="./images/facebook_white.svg" alt="Facebook" class="footer__social-icon">
+                  </a>
+                  <p>Facebook</p>
+                </li>
+                <li class="footer__list-item">
+                  <a href="#" class="footer__column-link">
+                    <img src="./images/instagram_white.svg" alt="Instagram" class="footer__social-icon">
+                  </a>
+                  <p>Instagram</p>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">© 2025 Victor Hugo</p>
+          </div>
+        </footer>
       </main>
     </div>
   </body>
