fix:footer copyright

--- a/index.html
+++ b/index.html
@@ -306,11 +306,8 @@
               </li>
             </ul>
           </div>
-
         </div>
-        <div class="footer__copyright">
-          <p class="footer__copyright-text">© 2025 Victor Hugo</p>
-        </div>
+        <p class="footer__copyright">© 2025 Victor Hugo</p>
       </footer>
     </div>
   </body>
